# routiium

./: .dockerignore  .env.example  .gitignore  .npmignore  ANALYTICS.md  API_REFERENCE.md  Cargo.toml  Dockerfile  README.md  ROUTER_USAGE.md  bedrock_test_config.json  docker-compose.yml  package.json  router_aliases.json.example  routiium.yaml.example  routing.json.example  rust-toolchain.toml  start_bedrock_server.sh  test_bedrock_e2e.sh  test_bedrock_integration.sh  test_mistral_ministral.sh
docs/: ANALYTICS.md  API_REFERENCE.md  AWS_BEDROCK.md  CLI.md  CONFIGURATION.md  GETTING_STARTED.md  JUDGE_POLICY.md  PRODUCTION_CHECKLIST.md  PRODUCTION_HARDENING.md  RATE_LIMITS.md  README.md  ROADMAP.md  ROUTER_API_SPEC.md  ROUTER_USAGE.md  SECURITY_MODEL.md
examples/: bedrock_test.sh  router_service.rs
npm/: platform.js  postinstall.js  routiium.js  verify-publish.js
python_tests/: QUICKSTART.md  run_tests.sh
scripts/: cargo-audit.sh
src/: analytics.rs  analytics_middleware.rs  app_config.rs  auth.rs  bedrock.rs  chat_history.rs  chat_history_jsonl.rs  chat_history_manager.rs  chat_history_memory.rs  chat_history_postgres.rs  chat_history_schema.sql  chat_history_sqlite.rs  chat_history_turso.rs  cli.rs  conversion.rs  judge_selector.rs  lib.rs  main.rs  pricing.rs  rate_limit.rs  router_client.rs  routing_config.rs  safety_audit.rs  safety_judge.rs  server.rs  util.rs
tests/: admin_endpoints_tests.rs  comprehensive_conversion_tests.rs  conversion_tests.rs  embedded_router_security.rs  integration_tests.rs  mcp_injection_tests.rs  rate_limit_tests.rs  reload_tests.rs  response_body_conversion_tests.rs  router_integration.rs  safety_audit_tests.rs  system_prompt_tests.rs  (+2 more)
(+51 files in other folders)
