[package]
name = "routiium"
version = "0.1.1"
edition = "2021"
description = "Translate and proxy OpenAI Chat Completions requests to the Responses API."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/labiium/routiium"
repository = "https://github.com/labiium/routiium"
authors = ["Routiium Contributors"]
categories = ["api-bindings", "web-programming::http-server"]
keywords = ["openai", "responses", "chat-completions", "proxy", "converter"]


[lib]
name = "routiium"
path = "src/lib.rs"

[[bin]]
name = "routiium"
path = "src/main.rs"


[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1"
dotenvy = "0.15"
anyhow = "1"


rand = "0.8"
regex = "1"

# HTTP client
reqwest = { version = "0.12", features = [
    "stream",
    "json",
    "gzip",
    "deflate",
    "brotli",
] }

# MCP client (simplified implementation)
async-trait = "0.1"

# Networking and HTTP primitives
http = "1"
bytes = "1"
futures-util = "0.3"
futures = "0.3"
sled = "0.34"
r2d2 = "0.8"
redis = "0.24"

# AWS Bedrock support
aws-config = "1.1"
aws-sdk-bedrockruntime = "1.13"
aws-smithy-runtime-api = "1.1"
base64 = "0.21"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"
axum = "0.7"

[features]
default = ["sled"]
sled = []
